add some server

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,8 +15,8 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["client/src/*"]
     }
   },
-  "include": ["src"]
+  "include": ["client/src"]
 }
