--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@monaco-editor/react": "^4.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
