--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,25 @@
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpileOnly src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 ./src/index.ts"
   },
   "author": "mikhail.angelov@gmail.com",
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "sequelize": "^6.37.6",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.14",
@@ -30,9 +33,11 @@
     "@types/node": "^22.13.10",
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   }
 }
