--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-      "target": "ES6",
-      "module": "CommonJS",
+      "target": "ES2021",
+      "module": "commonjs",
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
