--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "l": "lingui extract --clean --overwrite",
-    "lingui": "lingui compile --typescript"
+    "lingui": "lingui extract --clean --overwrite"
   },
   "dependencies": {
     "@lingui/detect-locale": "^5.3.0",
     "@lingui/react": "^5.3.0",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-context-menu": "^2.2.6",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -39,6 +40,7 @@
     "@lingui/swc-plugin": "^5.5.1",
     "@lingui/vite-plugin": "^5.3.0",
     "@tailwindcss/vite": "^4.0.15",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
