--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 ./src/index.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 ./src/index.ts",
+    "cp": "ts-node --respawn --transpile-only ./src/scripts/cpS3.ts"
   },
   "author": "mikhail.angelov@gmail.com",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
