--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
+    "build": "tsc && npm run copy-templates",
+    "copy-templates": "copyfiles -u 1 src/templates/*.ejs dist",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 ./src/index.ts",
     "cp": "ts-node --respawn --transpile-only ./src/scripts/cpS3.ts"
@@ -38,6 +39,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
