--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,7 @@
   "author": "mikhail.angelov@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1692.0",
+    "@aws-sdk/client-s3": "^3.782.0",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
