--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "copy-templates": "copyfiles -u 1 src/templates/*.ejs dist",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --inspect=9229 ./src/index.ts",
-    "cp": "ts-node --respawn --transpile-only ./src/scripts/cpS3.ts"
+    "cp": "ts-node --respawn --transpile-only ./src/scripts/cpS3.ts",
+    "migrate": "sequelize-cli db:migrate"
   },
   "author": "mikhail.angelov@gmail.com",
   "license": "ISC",
@@ -41,6 +42,7 @@
     "@types/uuid": "^10.0.0",
     "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
+    "sequelize-cli": "^6.6.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
