--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
+    "openai": "^5.3.0",
     "sequelize": "^6.37.6",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7",
