--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build:client": "vite build --outDir dist/client",
-    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
-    "build": "npm run build:client && npm run build:server",
+    "build": "vite build",
     "serve": "vite preview",
     "lingui": "lingui extract --clean --overwrite"
   },
