--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
 services:
+  nginx:
+    image: nginx:latest
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
   app:
-    image: docker.pkg.github.com/mikhail-angelov/playground/playground:latest
-    restart: unless-stopped
+    image: playground:latest
     ports:
       - "127.0.0.1:5000:5000"
     env_file:
       - .env
-    command: node /app/server/dist/index.js
+    command: npm start
     volumes:
       - ./database.sqlite:/app/database.sqlite
