--- a/drizzle.config.json
+++ b/drizzle.config.json
@@ -1,8 +1,8 @@
 {
-  "schema": "./db/schema.ts",
-  "out": "./db/migrations",
+  "schema": "./src/db/schema.ts",
+  "out": "./src/db/migrations",
   "dialect": "sqlite",
   "dbCredentials": {
-    "url": "./sqlite.db"
+    "url": "./database.sqlite"
   }
 }
