--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "migration:gen": "drizzle-kit generate",
     "migration:run": "drizzle-kit migrate",
-    "seed": "ts-node --project tsconfig.server.json ./db/seed.ts"
+    "seed": "ts-node --project tsconfig.server.json ./src/db/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
@@ -24,7 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.0",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.44.2",
     "ejs": "^3.1.10",
     "html2canvas": "^1.4.1",
@@ -42,6 +42,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.3.1",
     "uuid": "^8.0.0",
+    "ws": "^8.18.3",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/ejs": "^3.1.5",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
