--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,11 +12,19 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Tests
+        run: npm test
+
+      - name: Build project
+        run: npm run build
+
       - name: Publish Docker Image to GPR
         run: |
           docker -v
           echo ${{ secrets.GITHUB_TOKEN }} | docker login https://docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin
           docker build . --build-arg version=${{ github.run_number }} --tag docker.pkg.github.com/mikhail-angelov/playground/playground:${{ github.run_number }} --tag docker.pkg.github.com/mikhail-angelov/playground/playground:latest
           docker push docker.pkg.github.com/mikhail-angelov/playground/playground --all-tags
-  
