--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
     "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.44.2",
