--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.0",
-    "drizzle-kit": "^0.18.1",
+    "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.44.2",
     "ejs": "^3.1.10",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
-    "next": "15.3.5",
-    "nodemailer": "^6.10.0",
+    "next": "^15.5.9",
+    "nodemailer": "^7.0.11",
     "openai": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
