--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "next": "^15.5.9",
+    "next-yandex-metrica": "^1.2.3",
     "nodemailer": "^7.0.11",
     "openai": "^5.3.0",
     "react": "^19.0.0",
