feat: Implement Socket.IO for real-time communication with server-side handling, a client-side hook, and a test page.

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "d": "ts-node --project tsconfig.server.json server.ts",
+    "dev": "ts-node --project tsconfig.server.json server.ts",
+    "next:dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production ts-node --project tsconfig.server.json server.ts",
+    "next:start": "next start",
     "lint": "next lint",
     "test": "jest",
     "migration:gen": "drizzle-kit generate",
