feat: use Telegram username for user identification and update database file name in docker-compose.

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -9,7 +9,7 @@ services:
       - .env
     command: npm start
     volumes:
-      - ./database.sqlite:/app/database.sqlite
+      - ./database.db:/app/database.db
     logging:
       driver: "json-file"
       options:
