feat: Introduce project tags for Telegram integration, refactor app host environment variable usage, and remove development artifacts.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node --project tsconfig.server.json server.ts",
-    "next:dev": "next dev --turbopack",
+    "next:dev": "ts-node --project tsconfig.server.json server.ts",
+    "dev": "next dev --turbopack",
     "build": "next build && npm run build:server",
     "build:server": "tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node dist/server.js",
