--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.44.2",
     "ejs": "^3.1.10",
+    "fabric": "^7.1.0",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
