--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -48,6 +50,8 @@
     "socket.io": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.182.0",
+    "three-stdlib": "^2.36.1",
     "uuid": "^8.0.0",
     "zustand": "^5.0.6"
   },
