--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "127.0.0.1:5000:5000"
     env_file:
-      - .env
+      - ./.env
     command: npm start
     volumes:
       - ./database.db:/app/database.db
